# python-backend-hw

./: .coveragerc  .env.test  .gitignore  Dockerfile  README.md  README_hw_4_5.md  docker-compose.yml  hw5.yml  isolation_demo.db  pyproject.toml  pytest.ini  requirements.txt  requiremets.txt  shop.db
hw2/hw/: .coveragerc  .dockerignore  .env.example  .gitignore  DOCKER_README.md  Dockerfile  Dockerfile.test  DockerfilePytest  HW4_README.md  MONITORING.md  QUICKSTART.md  README.md  README_hw3.md  TEST_README.md  WEBSOCKET_CHAT.md  alembic.ini  chat.html  client.py  client2.py  client_websockets.py  conftest.py  create_test_db.py  ddoser.py  demo_isolation_levels.py  docker-compose-pytest.yml  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml  example.env  generate_errors.py  grafana-dashboard.json  grafana_http_observability.json  grafana_my_dashboard.json  health_check.py  hw4.md  isolation_demos.py  load_generator.py  load_test.py  log.txt  makefile  (+47 more)
hw2/hw/WebSocket/: client.py  server.py
hw2/hw/alembic/: env.py
hw2/hw/application/: api_app.py
hw2/hw/chat/: README.md  client.py  server.py
hw2/hw/chat_ws/: client.py  contracts.py  server.py
hw2/hw/docker/: Dockerfile.shop_api  prometheus.yml
hw2/hw/grafana/: dashboard.json
hw2/hw/hw4/: isolation_demo.py
hw2/hw/init-db/: init.sql
hw2/hw/isolation_demos/: 01_dirty_read_problem.py  02_dirty_read_solved.py  03_non_repeatable_read_problem.py  04_non_repeatable_read_solved.py  05_phantom_reads_repeatable_read.py  06_serializable.py
hw2/hw/migrations/: 001_init.sql  env.py  init.sql  (+1 more)
(+973 files in other folders)
