[project]
name = "hw"
version = "0.1.0"
description = "Homework 2 - Shop API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=37.8.0",
    "fastapi>=0.117.1",
    "httpx>=0.27.2",
    "prometheus-fastapi-instrumentator==7.1.0",
    "psycopg2-binary>=2.9",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn>=0.24.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=shop_api --cov-report=term-missing"

[tool.coverage.run]
source = ["shop_api"]
omit = ["tests/*", "**/__init__.py", "shop_api/main.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]
