[project]
name = "hw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0",
    "faker>=37.8.0",
    "fastapi>=0.117.1",
    "httpx>=0.27.2",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg2-binary>=2.9.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.24.0",
]
